--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,5 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
+ 
+html body {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-flow: column;
+}
+
+.tabs-content {
+  height: 100%;
+  overflow-y: scroll !important;
+}
+
 .login-page {
   width: 360px;
   padding: 8% 0 0;
@@ -10,7 +24,6 @@
   z-index: 1;
   background: #FFFFFF;
   max-width: 360px;
-  margin: 0 auto 100px;
   padding: 45px;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
@@ -41,13 +54,24 @@
   cursor: pointer;
 }
 
-.form #lista_cursos p{
+.form #lista_cursos .cbuton{
   height: 50px;
-  line-height: 50px;
   background-color: #eee;
-  text-align: center;
-  margin-bottom: 20px;
+  color: #000000;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
+
+.form #lista_tasks .tbuton{
+  height: 50px;
+  background-color: #eee;
+  color: #000000;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+
+
 .form button:hover,.form button:active,.form button:focus {
   background: #43A047;
 }
