alternate branch created
branch created to acommodate API from the neighboting class

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -2,11 +2,14 @@
 
  
 html body {
-  height: 100vh;
   width: 100%;
   display: flex;
   justify-content: space-between;
   flex-flow: column;
+}
+
+.row {
+  margin-top: 10px !important;
 }
 
 .tabs-content {
@@ -15,121 +18,210 @@ html body {
 }
 
 .login-page {
-  width: 360px;
   padding: 8% 0 0;
-  margin: auto;
+  margin:auto;
 }
 .form {
-  position: relative;
   z-index: 1;
   background: #FFFFFF;
-  max-width: 360px;
-  padding: 45px;
+  max-width: 500px;
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-bottom: 10%;
   text-align: center;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  border-radius: 5%;
+  border-style: solid;
+  border-color: #000000;
+  border-width: 2px;
+  display: block;
+  margin-left:auto;
+  margin-right: auto;
 }
 .form input {
   font-family: "Roboto", sans-serif;
   outline: 0;
-  background: #f2f2f2;
+  background: #FFFFFF;
   width: 100%;
   border: 0;
-  margin: 0 0 15px;
+  margin: 0 auto 15px;
   padding: 15px;
   box-sizing: border-box;
   font-size: 14px;
+  border-style: solid;
+  border-color: #000000;
+  border-width: 2px;
+  border-radius: 15px;
 }
-.form button {
+
+.form #loginButton{
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #4CAF50;
-  width: 100%;
+  background: #FFA76C;
+  width: 30%;
+  height: 80%;
   border: 0;
   padding: 15px;
-  color: #FFFFFF;
   font-size: 14px;
-  -webkit-transition: all 0.3 ease;
   transition: all 0.3 ease;
   cursor: pointer;
-}
-
-.form #lista_cursos .cbuton{
-  height: 50px;
-  background-color: #eee;
-  color: #000000;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.form #lista_tasks .tbuton{
-  height: 50px;
-  background-color: #eee;
-  color: #000000;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-
-
-.form button:hover,.form button:active,.form button:focus {
-  background: #43A047;
-}
-.form .message {
-  margin: 15px 0 0;
-  color: #b3b3b3;
-  font-size: 12px;
-}
-.form img {
-	padding-bottom:30px;
-}
-.form .message a {
-  color: #4CAF50;
-  text-decoration: none;
-}
-.form .register-form {
-  display: none;
-}
-.container {
-  position: relative;
-  z-index: 1;
-  max-width: 300px;
-  margin: 0 auto;
-}
-.container:before, .container:after {
-  content: "";
+  border-style: solid;
+  border-color: #000000;
+  border-width: 2px;
+  border-radius: 15px;
   display: block;
-  clear: both;
+  margin: 0 auto 10px;
 }
-.container .info {
-  margin: 50px auto;
-  text-align: center;
+
+.form #registerButton{
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #FFFFFF;
+    width: 50%;
+    height: 80%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    border-style: solid;
+    border-color: #000000;
+    border-width: 2px;
+    border-radius: 15px;
+    display: block;
+    margin: 0 auto 10px;
+  }
+
+  .form-listac {
+    z-index: 1;
+    background: #FFFFFF;
+    max-width: 500px;
+    padding-top: 2%;
+    padding-right: 1%;
+    padding-bottom: 5%;
+    text-align: center;
+    border-radius: 5%;
+    border-style: solid;
+    border-color: #000000;
+    border-width: 2px;
+    display: block;
+    margin-left:auto;
+    margin-right: auto;
+  }
+
+.form label {
+    float: left;
 }
-.container .info h1 {
-  margin: 0 0 15px;
-  padding: 0;
-  font-size: 36px;
-  font-weight: 300;
-  color: #1a1a1a;
-}
-.container .info span {
-  color: #4d4d4d;
-  font-size: 12px;
-}
-.container .info span a {
-  color: #000000;
-  text-decoration: none;
-}
-.container .info span .fa {
-  color: #EF3B3A;
-}
-body {
-  background: #76b852; /* fallback for old browsers */
-  background: -webkit-linear-gradient(right, #76b852, #8DC26F);
-  background: -moz-linear-gradient(right, #76b852, #8DC26F);
-  background: -o-linear-gradient(right, #76b852, #8DC26F);
-  background: linear-gradient(to left, #76b852, #8DC26F);
+
+.form-listac #lista_cursos .cbuton{
   font-family: "Roboto", sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;      
+    text-transform: uppercase;
+    outline: 0;
+    background: #FFFFFF;
+    width: 50%;
+    height: 80%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    border-style: solid;
+    border-color: #000000;
+    border-width: 2px;
+    border-radius: 15px;
+    display: block;
+    margin: 5px 5px;
+    width: 100%;
+    align-items: left;
+}
+
+.form-listac .title{
+  font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #FFA76C;
+    width: 50%;
+    height: 80%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    border-style: solid;
+    border-color: #000000;
+    border-width: 2px;
+    border-radius: 15px;
+    display: block;
+    margin: 5px 5px;
+    width: 100%;
+    align-items: left;
+    color: #000000;
+    text-decoration: none;
+}
+
+.form-listac .login-form #lista_tasks .tbuton{
+  font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #FFFFFF;
+    width: 50%;
+    height: 80%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    border-style: solid;
+    border-color: #000000;
+    border-width: 2px;
+    border-radius: 15px;
+    display: block;
+    margin: 5px 5px;
+    width: 100%;
+    align-items: left;
+    color: #000000;
+    text-decoration: none;
+}
+
+.form-listac .login-form #lista_tasks .vrbuton{
+  font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #FFFFFF;
+    height: 80%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    transition: all 0.3 ease;
+    cursor: pointer;
+    border-style: solid;
+    border-color: #000000;
+    border-width: 2px;
+    border-radius: 15px;
+    display: block;
+    margin: 5px 5px;
+    width: 100%;
+    align-items: left;
+    color: #000000;
+    text-decoration: none;
+}
+
+nav .nav-wrapper a {
+    font-size: medium;
+    margin-left: 20px;
+    color:#000000;
+    font-size: 50%;
+    align-items: center;
+    align-content: center;
+}
+
+nav .nav-wrapper img {
+    max-width: 100%;
+    max-height: 100%;
+    align-self: center;
+}
+
+body {
+  background: #FFCC99;
 }
